--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/webglgamemechamnic.loader.js";
       var config = {
-        dataUrl: buildUrl + "/webglgamemechamnic.data.br",
-        frameworkUrl: buildUrl + "/webglgamemechamnic.framework.js.br",
-        codeUrl: buildUrl + "/webglgamemechamnic.wasm.br",
+        dataUrl: buildUrl + "/webglgamemechamnic.data",
+        frameworkUrl: buildUrl + "/webglgamemechamnic.framework.js",
+        codeUrl: buildUrl + "/webglgamemechamnic.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "GyroMechanics",
