--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webglgamemechamnic.loader.js";
+      var loaderUrl = buildUrl + "/Gyro.loader.js";
       var config = {
-        dataUrl: buildUrl + "/webglgamemechamnic.data",
-        frameworkUrl: buildUrl + "/webglgamemechamnic.framework.js",
-        codeUrl: buildUrl + "/webglgamemechamnic.wasm",
+        dataUrl: buildUrl + "/Gyro.data",
+        frameworkUrl: buildUrl + "/Gyro.framework.js",
+        codeUrl: buildUrl + "/Gyro.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "GyroMechanics",
